RESOLVED FIXED310963
`FixedVector(size, value)` should not double-initialize non-POD elements
https://bugs.webkit.org/show_bug.cgi?id=310963
Summary `FixedVector(size, value)` should not double-initialize non-POD elements
Chris Dumez
Reported 2026-03-28 01:07:01 PDT
`FixedVector(size, value)` should not double-initialize non-POD elements.
Attachments
Chris Dumez
Comment 1 2026-03-28 01:09:04 PDT
EWS
Comment 2 2026-03-28 19:15:47 PDT
Committed 310167@main (422833beda07): <https://commits.webkit.org/310167@main> Reviewed commits have been landed. Closing PR #61560 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-28 19:16:13 PDT
Note You need to log in before you can comment on or make changes to this bug.