Cherry-pick 310167@main (422833beda07). https://bugs.webkit.org/show_bug.cgi?id=310963

`FixedVector(size, value)` should not double-initialize non-POD elements
    https://bugs.webkit.org/show_bug.cgi?id=310963

    Reviewed by Sam Weinig.

    The `FixedVector(size_t, const T&)` constructor was first
    default-constructing all elements via `Storage::create(size)`, then
    copy-assigning over them with `fill(value)`. For non-POD types, this
    means N default constructions + N copy assignments instead of just
    N copy constructions.

    Fix this by adding a `createFilled()` factory to `EmbeddedFixedVector`
    backed by a new `TrailingArray` FillWith constructor that uses
    `VectorTypeOperations::uninitializedFill`, matching what
    `Vector(size, val)` already does.

    Also add API test coverage for this constructor, which had none.

    Test: Tools/TestWebKitAPI/Tests/WTF/FixedVector.cpp

    * Source/WTF/wtf/EmbeddedFixedVector.h:
    * Source/WTF/wtf/FixedVector.h:
    (WTF::FixedVector::FixedVector):
    * Source/WTF/wtf/TrailingArray.h:
    (WTF::TrailingArray::TrailingArray):
    * Tools/TestWebKitAPI/Tests/WTF/FixedVector.cpp:
    (TestWebKitAPI::TEST(WTF_FixedVector, SizeAndValueConstructorPOD)):
    (TestWebKitAPI::TEST(WTF_FixedVector, SizeAndValueConstructorNonPOD)):
    (TestWebKitAPI::TEST(WTF_FixedVector, SizeAndValueConstructorZeroSize)):
    (TestWebKitAPI::TEST(WTF_FixedVector, SizeAndValueConstructorSingleElement)):

    Canonical link: https://commits.webkit.org/310167@main

Canonical link: https://commits.webkit.org/298234.524@webkitglib/2.50